--- a/project.html
+++ b/project.html
@@ -21,9 +21,7 @@
             }
             h1{
                 color: white;
-                font-size: 40px;
-                text-align: center;
-                font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;
+               
             }
             p{
                 color:rgb(235, 199, 146);
@@ -171,7 +169,7 @@ ul li:hover ul li
         <p>We assure the best experience for a job seeker</p>
 </div>
 
-<h style="font-size: 20px ;color: red; text-align: center;">Visit this to go to site map <span><a href="smap.html" target="_blank" style="color: blue;text-align: center;">Site map</a></span></h>   
+<h style="font-size: 20px ;color: red; text-align: center;">Visit this to go to site map <span><a href="smap.html" target="_blank" style="color:white;text-align: center;">Site map</a></span></h>   
 
           
 <marquee><h1 style="font-size: 20px">***Before applying for any job,we strongly reccomend you to go through our <span><a href="tnc.html" target="_blank" style="color: black;">terms and conditions</a></span>***</h1></marquee>     
