--- a/smap.html
+++ b/smap.html
@@ -51,7 +51,7 @@
 
     </table>
     <center>
-    <a href="tnc.html" style="color: blanchedalmond;text-decoration: none;padding-left: 90px;font-size: 45px;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;padding-right: 350px;">Terms And Conditions</a></center>
+    <a href="tnc.html" style="color: blanchedalmond;text-decoration: none;font-size: 45px;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;padding-right: 350px;">Terms And Conditions</a></center>
     </div>
 </div>
 </center>
