--- a/project.html
+++ b/project.html
@@ -182,6 +182,7 @@ ul li:hover ul li
         </div>
 </div>
 
+<h style="font-size: 20px ;color: red; text-align: center;text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to Latest News<span><a href="lnews.html" target="_blank" style="color:white;text-align: center;">Site map</a></span></h>   
 
 
 <h style="font-size: 20px ;color: red; text-align: center;text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to site map <span><a href="smap.html" target="_blank" style="color:white;text-align: center;">Site map</a></span></h>   
