--- a/project.html
+++ b/project.html
@@ -190,7 +190,7 @@ ul li:hover ul li
 </div>
 
 <div style="" class="down">
-    <h style="font-size: 20px ;color: red; text-align: center;text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to Latest News<span><a href="lnews.html" target="_blank" style="color:white;text-align: center;">Site map</a></span></h>   
+    <h style="font-size: 20px ;color: red; text-align: center;text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to Latest News<span><a href="lnews.html" target="_blank" style="color:white;text-align: center;">Latest News</a></span></h>   
 <br><br>
 
     <h style="font-size: 20px ;color: red; text-align: center;text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to site map <span><a href="smap.html" target="_blank" style="color:white;text-align: center;">Site map</a></span></h>   
