--- a/project.html
+++ b/project.html
@@ -190,10 +190,10 @@ ul li:hover ul li
 </div>
 <div class="w3-container w3-center w3-animate-bottom">
 <div  class="down">
-    <h style="font-size: 20px ;color: red; text-align: center;text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to Latest News<span><a href="lnews.html" target="_blank" style="color:white;text-align: center;">Latest News</a></span></h>   
+    <h style="font-size: 20px ;color: red; text-align: center;text-decoration: underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to Latest News<span><a href="lnews.html" target="_blank" style="color:white;text-align: center;">Latest News</a></span></h>   
 <br><br>
 
-    <h style="font-size: 20px ;color: red; text-align: center;text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to site map <span><a href="smap.html" target="_blank" style="color:white;text-align: center;">Site map</a></span></h>   
+    <h style="font-size: 20px ;color: red; text-align: center;text-decoration: underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">Visit this to go to site map <span><a href="smap.html" target="_blank" style="color:white;text-align: center;">Site map</a></span></h>   
     
 </div>
 </div>
