--- a/lnews.html
+++ b/lnews.html
@@ -4,7 +4,7 @@
     <title>FORHIRE|Latest news </title>
     <style>
         body{
-    background-image: url("gif3.gif");
+    background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
 }
