--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ p{
                  <br>
                  <br>
                  <br>
-              <p>FORHIRE has an in-depth understanding of the Indian consumer internet domain. With years of experience in the domain, strong cash flow generation and a diversified business portfolio, it one of the very few profitable pure play internet companies in the country.
+              <p style="font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;">FORHIRE has an in-depth understanding of the Indian consumer internet domain. With years of experience in the domain, strong cash flow generation and a diversified business portfolio, it one of the very few profitable pure play internet companies in the country.
 
                 The company was incorporated on May 1, 1995 under the Companies Act, 1956 as forhire (India) Private Limited and became a public limited company on April 27, 2006. Starting with a classified recruitment online business, forhire has grown and diversified rapidly, setting benchmarks as a pioneer for others to follow. Driven by innovation, creativity, an experienced and talented leadership team and a strong culture of entrepreneurship, today, it is India’s premier online classifieds company in recruitment, matrimony, real estate, education and related services.</p>
                 
@@ -136,7 +136,7 @@ p{
                         <td>CB.EN.U4CSE1930</td>
                     </tr>
                     <tr>
-                        <td>K Rithwik</td>
+                        <td>J Rithwik</td>
                         <td>CB.EN.U4CSE1926</td>
                     </tr>
                 </table>
