--- a/abt.html
+++ b/abt.html
@@ -146,8 +146,8 @@ ul li:hover ul li
 
             Founded in 2019 by Team 6, ForHire has come a long way from its beginnings . When we first started out,our passion for "generating and finding jobs" drove us to start our own business.</p>
             <h1 style="text-decoration:overline underline;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;color: goldenrod;text-align: center;">Our Company Looks Like </h1>
-           <iframe width="735" height="338" src="https://www.youtube.com/embed/XZmGGAbHqa0" frameborder="5" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           <iframe width="735" height="338"  src="https://www.youtube.com/embed/aqvhtI0BWec" frameborder="5" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+           <iframe width="735" height="338" src="https://www.youtube.com/embed/XZmGGAbHqa0" frameborder="5" allow="accelerometer; autoplay; encrypted-media;" allowfullscreen></iframe>
+           <iframe width="735" height="338"  src="https://www.youtube.com/embed/aqvhtI0BWec" frameborder="5" allow="accelerometer; autoplay; encrypted-media;" allowfullscreen ></iframe>
             
            <p style="color: goldenrod;font-family: 'Modak', cursive;font-family: 'Baloo Bhaina 2', cursive;font-size: 30px;">We hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments, please don't hesitate to contact us.</p> 
             
